--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
   },
 
   "rules": {
-    "indent": ["error", 2],
+    "indent": ["error", 2, { "ObjectExpression": 1 }],
     "semi": 2,
     "new-cap": 0
   }
